...
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_from_screen"
                android:layout_marginHorizontal="@dimen/distance_from_screen"
                android:text="@string/all_filters_label"
                style="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/search_text_input_layout" />

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/by_brewing_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_from_screen"
                android:text="@string/by_brewing_time_frame_label"
                style="@style/TextAppearance.AppCompat.Medium"

...
                app:startIconContentDescription="@string/open_date_picker_label"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintTop_toBottomOf="@id/search_text_input_layout"
                app:layout_constraintStart_toEndOf="@id/by_brewing_time_label"
                app:layout_constraintWidth_max="@dimen/max_length_timeframe_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/filter_label">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/brewing_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="23"
                    android:text="@={viewModel.datesFilter}"
                    android:maxLines="1"
                    android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/filter_by_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/distance_from_screen"
                android:text="@string/by_name_label"
                style="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintHorizontal_chainStyle="spread"
...
                app:layout_constraintStart_toEndOf="@id/filter_by_name_label"
                app:layout_constraintWidth_max="@dimen/max_length_name_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/brewing_time_text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={viewModel.nameFilter}"

                    android:maxLength="25"
                    android:maxLines="1"
                    android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_label"
                android:text="@string/reset_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/distance_from_screen"
                style="@style/Widget.MaterialComponents.Button.TextButton"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancel_label"
                app:layout_constraintTop_toTopOf="@id/filter_label"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintBottom_toBottomOf="@id/filter_label" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_label"
...
