...
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="?android:selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/beer_image"
                android:layout_width="@dimen/list_beer_image_width"
                android:layout_height="@dimen/list_beer_image_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintBottom_toBottomOf="parent" />
...
                app:layout_constraintStart_toStartOf="@id/beer_image"
                app:layout_constraintEnd_toEndOf="@id/beer_image"
                app:layout_constraintTop_toTopOf="@id/beer_image"
                app:layout_constraintBottom_toBottomOf="@id/beer_image" />

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/reload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                tools:visibility="gone"

                app:srcCompat="@drawable/ic_baseline_refresh_24"
...
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text="@{beer.description}"
                    tools:text="It's rumoured just a drop can calm the fiercest of storms. A balance of sweet..." />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/more_info_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_small_height"
                    android:text="@string/more_info_button_text"
                    android:singleLine="true"
                    style="@style/Widget.MaterialComponents.Button.TextButton" />

...
