...
                android:layout_marginStart="@dimen/distance_from_screen"
                android:layout_marginEnd="@dimen/margin_medium"
                app:startIconDrawable="@drawable/ic_baseline_search_24"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintTop_toBottomOf="@id/beer_box_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/more_filters"
                app:layout_constraintBottom_toTopOf="@id/gift_box_card_view">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                        android:layout_marginEnd="@dimen/distance_from_screen"
                        android:text="@string/stouts_strong_label" />
            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_beer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginHorizontal="@dimen/distance_from_screen"
                android:visibility="invisible"
                tools:listitem="@layout/item_beer"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollview_filter_buttons"
                app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nothing_matches_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_results_label"
                android:visibility="invisible"
                tools:visibility="gone"
                android:textAlignment="center"
...
